@@ -1,5 +1,6 @@
 package org.hms.medica.patient.service;
 
+
 import com.querydsl.core.types.Predicate;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -11,14 +12,18 @@ import org.hms.medica.patient.dto.PatientResponseDto;
 import org.hms.medica.patient.mapper.PatientMapper;
 import org.hms.medica.patient.model.Patient;
 import org.hms.medica.patient.repo.PatientRepository;
+import org.hms.medica.patient.repo.QPatientRepository;
 import org.hms.medica.user.exception.UserNotFoundException;
 import org.hms.medica.user.model.User;
 import org.hms.medica.user.service.UserService;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -26,64 +31,122 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Slf4j
 public class PatientService {
-  private final UserAppointmentService userAppointmentService;
-  private final UserService userService;
-  private final PatientAppointmentMapper patientAppointmentMapper;
-  private final PatientRepository patientRepository;
-  private final PatientMapper patientMapper;
 
-  public List<PatientAppointmentDto> getAppointments() {
-    User user = userService.getCurrentUser();
-    log.info(String.valueOf(user.getId()));
-    return userAppointmentService.findUserAppointments(user).stream()
-        .map(
-            (appointment) -> {
-              PatientAppointmentDto patientAppointmentDto =
-                  patientAppointmentMapper.toDto(appointment);
-              patientAppointmentDto.setDoctorId(appointment.getDoctor().getId());
-              return patientAppointmentDto;
-            })
-        .collect(Collectors.toList());
-  }
+    private final UserAppointmentService userAppointmentService;
+    private final UserService userService;
+    private final PatientAppointmentMapper patientAppointmentMapper;
+    private final PatientRepository patientRepository;
+    private final PatientMapper patientMapper;
+    private final PasswordEncoder passwordEncoder;
+    private final QPatientRepository qPatientRepository;
 
-  public List<PatientResponseDto> getAllPatients(Predicate predicate, Pageable pageable) {
-    return patientRepository.findAll(predicate, pageable).stream()
-        .map(patientMapper::mapPatientToPatientResponseDto)
-        .toList();
-  }
+    public List<PatientAppointmentDto> getAppointments() {
+        User user = userService.getCurrentUser();
+        log.info(String.valueOf(user.getId()));
+        return userAppointmentService.findUserAppointments(user).stream()
+                .map(
+                        (appointment) -> {
+                            PatientAppointmentDto patientAppointmentDto =
+                                    patientAppointmentMapper.toDto(appointment);
+                            patientAppointmentDto.setDoctorId(appointment.getDoctor().getId());
+                            return patientAppointmentDto;
+                        })
+                .collect(Collectors.toList());
+    }
 
-  public Patient getPatientById(Long patientId) {
-    return patientRepository
-        .findById(patientId)
-        .orElseThrow(
-            () -> new UsernameNotFoundException("Patient not found with id: " + patientId));
-  }
+    public List<Patient> findAllPatients() {
+        return patientRepository.findAll();
+    }
 
-  public PatientResponseDto getPatientDtoById(Long patientId) {
-    Patient patient = getPatientById(patientId);
-    return patientMapper.mapPatientToPatientResponseDto(patient);
-  }
+    public List<Patient> findAllTodayPatients(LocalDateTime localDateTime) {
+        return qPatientRepository.findTodayPatients(localDateTime);
+    }
 
-  @Transactional
-  public void registerPatient(PatientDto patientDto) {
-    var patient = new Patient();
-    patient = patientMapper.mapPatientDtoToPatient(patientDto);
-    patientRepository.save(patient);
-  }
+    public List<PatientResponseDto> findPatientByFullName(String fullName) {
+        return qPatientRepository.findPatientByFullName(fullName)
+                .stream()
+                .map(patientMapper::mapPatientToPatientResponseDto)
+                .toList();
+    }
 
-  @Transactional
-  public void updatePatient(Long patientId, PatientDto patientDto) {
-    var patient =
-        patientRepository
-            .findById(patientId)
-            .orElseThrow(
-                () -> new UsernameNotFoundException("Patient not found with id: " + patientId));
-    patientMapper.updatePatientFromDto(patientDto, patient);
-  }
+    public List<PatientResponseDto> getAllPatients(Predicate predicate, Pageable pageable) {
+        return patientRepository.findAll(predicate, pageable).stream()
+                .map(patientMapper::mapPatientToPatientResponseDto)
+                .toList();
+    }
 
-  public Patient findById(Long patientId) {
-    return patientRepository
-        .findById(patientId)
-        .orElseThrow(() -> new UserNotFoundException("Patient Not found with id: " + patientId));
-  }
+    public Patient getPatientById(Long patientId) {
+        return patientRepository
+                .findById(patientId)
+                .orElseThrow(
+                        () -> new UsernameNotFoundException("Patient not found with id: " + patientId));
+    }
+
+    public PatientResponseDto getPatientDtoById(Long patientId) {
+        Patient patient = getPatientById(patientId);
+        return patientMapper.mapPatientToPatientResponseDto(patient);
+    }
+
+    @Transactional
+    public void registerPatient(PatientDto patientDto) {
+        var patient = new Patient();
+        patient = patientMapper.mapPatientDtoToPatient(patientDto);
+        patientRepository.save(patient);
+    }
+
+    @Transactional
+    public PatientResponseDto updatePatient(Long patientId, PatientDto patientDto) {
+        var patient = patientRepository.findById(patientId)
+                .orElseThrow(() ->
+                        new UsernameNotFoundException("Patient not found with id: " + patientId));
+        var patientPassword = patientDto.getRequiredInfoDto().getPassword();
+        if (!(patientPassword.isEmpty() || patientPassword.isBlank()))
+            patient.setPassword(passwordEncoder.encode(patientDto.getRequiredInfoDto().getPassword()));
+        createPatientObj(patientDto, patient);
+        patientRepository.save(patient);
+        return patientMapper.mapPatientToPatientResponseDto(patient);
+    }
+
+
+    public Patient findById(Long patientId) {
+        return patientRepository.findById(patientId)
+                .orElseThrow(() -> new UserNotFoundException("Patient Not found with id: "
+                        + patientId));
+    }
+
+    public List<Patient> findNewPatients() {
+        return qPatientRepository.findNewPatients();
+    }
+
+    public List<PatientResponseDto> findMostRecentPatients() {
+        return qPatientRepository.findRecentPatients()
+                .stream()
+                .map(patientMapper::mapPatientToPatientResponseDto)
+                .toList();
+    }
+
+    public List<Patient> findOldPatients() {
+        return qPatientRepository.findOldPatient();
+    }
+
+    public void deleteById(Long patientId) {
+        patientRepository.deleteById(patientId);
+    }
+
+    private void createPatientObj(PatientDto patientDto, Patient patient) {
+        patient.setFirstname(patientDto.getRequiredInfoDto().getFirstname());
+        patient.setLastname(patientDto.getRequiredInfoDto().getLastname());
+        patient.setAddress(patientDto.getRequiredInfoDto().getAddress());
+        patient.setEmail(patientDto.getRequiredInfoDto().getEmail());
+        patient.setGender(patientDto.getRequiredInfoDto().getGender());
+        patient.setDob(patientDto.getRequiredInfoDto().getDob());
+        patient.setPhone(patientDto.getRequiredInfoDto().getPhone());
+        patient.setIs_enabled(patientDto.getRequiredInfoDto().getIs_enabled());
+        patient.setNationality(patientDto.getAdditionalInfoDto().getNationality());
+        patient.setMaritalStatus(patientDto.getAdditionalInfoDto().getMaritalStatus());
+        patient.setBloodType(patientDto.getAdditionalInfoDto().getBloodType());
+        patient.setInsurancePolicyNumber(patientDto.getAdditionalInfoDto().getInsurancePolicyNumber());
+
+    }
+
 }
